<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dep_site">http://amd.stu.neva.ru/</string>
    <string name="splash_screen_head_string">Department of Applied Mathematics, SPbPU</string>
    <string name="app_name">LineGame</string>
    <string name="new_game_button_string">New game</string>
    <string name="scores_table_button_string">Scores</string>
    <string name="tap_to_start_string">Tap and hold to play!</string>
    <string name="tap_to_continue_string">Tap to continue!</string>
    <string name="game_over_string">Game over!</string>
    <string name="dist_text_string">distance</string>
    <string name="dist_val_at_start">0</string>
    <string name="rules_btn_string">Rules</string>
    <string name="go_to_site_btn_string">To site</string>
    <string name="rules_header_text">Rules</string>
    <string name="rules_game_substr">Game</string>
    <string name="about_game_text">As game start, you will see the line scrolling upwards. As long as you don\'t touch the screen line will become thinner and thinner and at some point you\'ll loose that line and game will be over! So if you\'re not cruel and at least a little care about line lifetime, you need to keep the line thick by touching it with your fingers! But be ware: with time line will scroll faster and perform more dangerous turns! Also, you\'ll notice, that line parts can be differently colored, check rules section below to learn all about line colors!</string>
    <string name="rules_line_colors_subheader">Line colors</string>
    <string name="main_line_description">Main color of the line. Line just as is!</string>
    <string name="sudden_death_bonus_desc">Another anti-bonus color. Only one tap on the part of the line colored like this will cause line death!</string>
    <string name="tapped_line_desc">That is the color of parts of the line, which you successively cought with your finger!</string>
    <string name="dec_thick_speed_desc">If you touch part of the line colored like this, line become insensitive a little… It\'s getting harder to make it thicker.</string>
    <string name="inc_thick_speed_desc">But that is the bonus which increase the speed with that your line becomes thicker. Make it thicker quicker!</string>
    <string name="invis_bonus_desc">Unfortunately your favourite line can gone sometimes for a while…It happens if you tap on part of the line with that color.</string>
    <string name="no_miss_bonus_desc">Tap on that kind of the line will let you not worrying abount catching the line, tap anythere, but for a while.</string>
    <string name="credits_btn_string">Credits</string>
    <string name="best_score_text">Best score:</string>

    <!-- Default department splash screen stuff -->
    <string name="dummy_button">To Site</string>
    <string name="dummy_content">Print text here</string>
    <string name="str_depth">Applied Math Department</string>
    <string name="str_university">St.Petersburg State Polytechnical University</string>
    <string name="str_toweb">To site</string>
    <string name="inc_speed_bonus_desc">Let\'s scroll faster, my friend!</string>
    <string name="dec_speed_bonus_desc">Touch that colored part and line would let you relax by decreasing it\'s speed.</string>
</resources>
